# src/main/java/com/project/nhatrotot/model/PaymentState.java
@@ -1,0 +1,5 @@
+package com.project.nhatrotot.model;
+
+public enum PaymentState {
+    pending, cancelled, done
+}
